--- a/language/types/string.xml
+++ b/language/types/string.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: fbb8a1962dbbc696581c8ae3f77abd3a549cd4d8 Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: 0fa36ed5cc43f9e4a46cdfef83710b4f1ac4c970 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: no -->
-
 <sect1 xml:id="language.types.string">
  <title>Cadenas</title>
  
@@ -12,7 +11,7 @@
   lo mismo que un byte. Esto significa que PHP solo soporta el conjunto de 256 caracteres
   y por lo tanto no tiene soporte nativo Unicode. Ver
   <link linkend="language.types.string.details">detalles del tipo de dato
-  string</link>.
+   string</link>.
  </para>
  
  <note>
@@ -148,6 +147,10 @@ echo 'Las variables $tampoco se $expandiran';
       <row>
        <entry><literal>\v</literal></entry>
        <entry>tabulador vertical (VT o 0x0B (11) en ASCII) (desde PHP 5.2.5)</entry>
+      </row>
+      <row>
+       <entry><literal>\e</literal></entry>
+       <entry>escape (ESC o 0x1B (27) en ASCII) (desde PHP 5.4.0)</entry>
       </row>
       <row>
        <entry><literal>\f</literal></entry>
@@ -460,10 +463,10 @@ Esto debe mostrar una 'A' mayúscula: \x41]]>
      propiedades o constantes en una clase:
     </para>
    </note>
-    
-    <example>
-     <title>Ejemplo de datos estáticos</title>
-     <programlisting role="php">
+   
+   <example>
+    <title>Ejemplo de datos estáticos</title>
+    <programlisting role="php">
 <![CDATA[
 <?php
 class foo {
@@ -473,8 +476,8 @@ EOT;
 }
 ?>
 ]]>
-     </programlisting>
-    </example>
+    </programlisting>
+   </example>
    
    <note>
     <para>
@@ -586,7 +589,7 @@ Robert Paulsen saludó a los dos .
 ]]>
      </screen>
     </example>
-
+    
     <simpara>
      Para casos más complejos se debe emplear la sintaxis compleja.
     </simpara>
@@ -993,7 +996,7 @@ echo "\$foo==$foo; tipo es " . gettype ($foo) . "<br />\n";
   
  </sect2>
  
-<sect2 xml:id="language.types.string.details">
+ <sect2 xml:id="language.types.string.details">
   
   <title>Detalles del tipo de dato String</title>
   
@@ -1085,7 +1088,7 @@ echo "\$foo==$foo; tipo es " . gettype ($foo) . "<br />\n";
     </simpara>
    </listitem>
   </itemizedlist>
-
+  
   <para>
    En resumen, esto significa que para escribir programas Unicode de forma correcta
    hay que evitar cuidadosamente las funciones que pudean fallar y que muy probablemente
