Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@320356 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/float.xml
+++ b/language/types/float.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 2a7d8cd25bf2940d367122921992bcbeb82eaeb2 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 3f82f09927c0584b3769ac2d9a9624512fafe793 Maintainer: jpberdejo Status: ready -->
+<!-- Reviewed: no -->
 <sect1 xml:id="language.types.float">
  <title>Números de punto flotante</title>
-
+ 
  <para>
   Los números de punto flotante (también conocidos como "flotantes",
   "dobles" o "números reales") pueden ser especificados usando cualquiera de las siguientes sintaxis:
  </para>
-
+ 
  <informalexample>
   <programlisting role="php">
 <![CDATA[
@@ -20,11 +21,11 @@ $c = 7E-10;
 ]]>
   </programlisting>
  </informalexample>
-
+ 
  <para>
   Formalmente: 
  </para>
-
+ 
  <informalexample>
   <programlisting>
 <![CDATA[
@@ -34,17 +35,17 @@ EXPONENT_DNUM [+-]?(({LNUM} | {DNUM}) [eE][+-]? {LNUM})
 ]]>
   </programlisting>
  </informalexample>
-
+ 
  <para>
   El tamaño de un flotante depende de la plataforma, aunque un valor común
   consiste en un máximo de ~1.8e308 con una precisión de aproximadamente 14
   dígitos decimales (lo que es un valor de 64 bits en formato IEEE).
  </para>
-
+ 
  <warning xml:id="warn.float-precision">
   <title>Precisión del punto flotante</title>
   
-<para>
+  <para>
    Los números de punto flotante tienen una precisión limitada. Aunque depende del
    sistema, PHP típicamente utiliza el formato de doble precisión IEEE 754, el cual
    dará un error relativo máximo por aproximación del orden de 1.11e-16.
@@ -65,7 +66,7 @@ EXPONENT_DNUM [+-]?(({LNUM} | {DNUM}) [eE][+-]? {LNUM})
    ya que la representación interna será algo así como
    <literal>7.9999999999999991118...</literal>.
   </para>
-
+  
   <para>
    Así que nunca se confía en resultados de números flotantes hasta el último dígito y nunca se comparan
    números de punto flotante para igualdad. Si es necesaria una mejor precisión,
@@ -73,7 +74,7 @@ EXPONENT_DNUM [+-]?(({LNUM} | {DNUM}) [eE][+-]? {LNUM})
    las funciones <link linkend="ref.gmp">gmp</link> están disponibles.
   </para>
  </warning>
-
+ 
  <sect2 xml:id="language.types.float.casting">
   <title>Conversión a flotante</title>
   
@@ -88,7 +89,23 @@ EXPONENT_DNUM [+-]?(({LNUM} | {DNUM}) [eE][+-]? {LNUM})
    para más información. A partir de PHP 5, una noticia es generada si
    intenta convertir un objeto a <type>float</type>.
   </para>
-
+  
+ </sect2>
+ 
+ <sect2 xml:id="language.types.float.nan">
+  <title>NaN</title>
+  <para>
+   Algunas operaciones numéricas pueden resultar en un valor representado por la constante
+   <constant>NAN</constant>. Este resultado representa un valor no definido o
+   no representable mediante cálculos de coma flotante. Cualquier comparación, ya sea poco
+   rígida o estricta, de esta valor con cualquier otro valor, incluido él mismo
+   tenfrá un resultado de &false;.
+  </para>
+  <para>
+   Ya que <constant>NAN</constant> representa cualquier número de diferentes valores,
+   <constant>NAN</constant> no debería compararse con otros valores, incluido
+   él mismo; en su lugar debería comprobarse usando la función <function>is_nan</function>.
+  </para>
  </sect2>
 </sect1>
 
