--- a/language/predefined/variables/server.xml
+++ b/language/predefined/variables/server.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: cb0630b14901459c0bf1556e7d68f1b4c0d3796e Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 3c827996b5d39a5dc39da99fba779c895149adab Maintainer: chuso Status: ready -->
+<!-- Reviewed: no -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.server" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
@@ -323,6 +324,24 @@
       <simpara>
        El puerto empleado por la máquina del usuario para comunicarse 
        con el servidor web.
+      </simpara>
+     </listitem>
+    </varlistentry>
+    
+    <varlistentry>
+     <term>'<varname>REMOTE_USER</varname>'</term>
+     <listitem>
+      <simpara>
+       El usuario autenticado.
+      </simpara>
+     </listitem>
+    </varlistentry>
+
+    <varlistentry>
+     <term>'<varname>REDIRECT_REMOTE_USER</varname>'</term>
+     <listitem>
+      <simpara>
+       El usuario autenticado si la petición es redirigida internamente.
       </simpara>
      </listitem>
     </varlistentry>
