--- a/language/oop5/overloading.xml
+++ b/language/oop5/overloading.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 606c44a528e1649ff4dcb5706a5e85935d9c36f6 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 1428093951bffcd49176329c388f004f4c9b7a32 Maintainer: chuso Status: ready -->
 <!-- Reviewed: no -->
-
  <sect1 xml:id="language.oop5.overloading" xmlns="http://docbook.org/ns/docbook">
   <title>Sobrecarga</title>
 
@@ -19,7 +18,8 @@
    <link linkend="language.oop5.visibility">visibles</link> en el
    ámbito activo. A lo largo de esta sección usaremos los términos
    <quote>propiedades inaccesibles</quote> y <quote>métodos
-   inaccesibles</quote> para referirnos a este hecho. 
+   inaccesibles</quote> para referirnos a esta combinación de declaración
+   y visibilidad.
   </para>
 
   <para>
@@ -167,7 +167,8 @@
     <programlisting role="php">
 <![CDATA[
 <?php
-class PropertyTest {
+class PropertyTest
+{
     /**  Localización de los datos sobrecargados.  */
     private $data = array();
 
@@ -177,12 +178,14 @@ class PropertyTest {
     /**  La sobre carga sólo funciona aquí al acceder desde fuera de la clase.  */
     private $hidden = 2;
 
-    public function __set($name, $value) {
+    public function __set($name, $value)
+    {
         echo "Estableciendo '$name' a '$value'\n";
         $this->data[$name] = $value;
     }
 
-    public function __get($name) {
+    public function __get($name)
+    {
         echo "Consultando '$name'\n";
         if (array_key_exists($name, $this->data)) {
             return $this->data[$name];
@@ -198,19 +201,22 @@ class PropertyTest {
     }
 
     /**  Desde PHP 5.1.0  */
-    public function __isset($name) {
+    public function __isset($name)
+    {
         echo "¿Está definido '$name'?\n";
         return isset($this->data[$name]);
     }
 
     /**  Desde PHP 5.1.0  */
-    public function __unset($name) {
+    public function __unset($name)
+    {
         echo "Eliminando '$name'\n";
         unset($this->data[$name]);
     }
 
     /**  No es un método mágico, esta aquí para completar el ejemplo.  */
-    public function getHidden() {
+    public function getHidden()
+    {
         return $this->hidden;
     }
 }
@@ -306,15 +312,18 @@ Notice:  Propiedad indefinida mediante __get(): hidden en <file> en la línea 69
     <programlisting role="php">
   <![CDATA[
 <?php
-class MethodTest {
-    public function __call($name, $arguments) {
+class MethodTest
+{
+    public function __call($name, $arguments)
+    {
         // Nota: el valor $name es sensible a mayúsculas.
         echo "Llamando al método de objeto '$name' "
              . implode(', ', $arguments). "\n";
     }
 
     /**  Desde PHP 5.3.0  */
-    public static function __callStatic($name, $arguments) {
+    public static function __callStatic($name, $arguments)
+    {
         // Nota: el valor $name es sensible a mayúsculas.
         echo "Llamando al método estático '$name' "
              . implode(', ', $arguments). "\n";
