Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@320914 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/context/ssl.xml
+++ b/language/context/ssl.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 55bde7eab9bb2256a8ae638cc97d821bdf3fd67a Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 80e6ea9269c08e27ecd438a162898676fe878adf Maintainer: jpberdejo Status: ready -->
 
 <refentry xml:id="context.ssl" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -41,7 +41,8 @@
      </term>
      <listitem>
       <para>
-       Permite certificados auto-firmados.
+       Permite certificados auto-firmados. Requiere
+       <link linkend="context.ssl.verify-peer"><parameter>verify_peer</parameter></link>.
       </para>
       <para>
        Por defecto es &false;
