updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@321300 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/functions.xml
+++ b/language/functions.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 547752940cda06624d44de01da7b89dc20237d5c Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: a7d6b39bfb7a0e85270adb5ea863a76cf4350458 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: yes -->
 
 <chapter xml:id="language.functions" xmlns="http://docbook.org/ns/docbook">
  <title>Funciones</title>
@@ -171,7 +171,8 @@ function recursividad($a)
   
   <simpara>
    La información puede ser pasada a las funciones mediante la lista de argumentos,
-   la cual es una lista de expresiones delimitadas por comas.
+   la cual es una lista de expresiones delimitadas por comas. Los argumentos son
+   evaluados de izquierda a derecha.
   </simpara> 
   <para>
    PHP soporta argumentos pasados por valor (por defecto), <link
@@ -179,7 +180,7 @@ function recursividad($a)
    referencia</link>, y <link
    linkend="functions.arguments.default">valores de argumentos
    predeterminados</link>. Las <link linkend="functions.variable-arg-list">Listas de argumentos
-   de longitud variable</link> también está soportadas, vea también las referencias de funciones para
+   de longitud variable</link> también están soportadas, vea también las referencias de funciones para
    <function>func_num_args</function>,
    <function>func_get_arg</function>, y
    <function>func_get_args</function> para más información.
