updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@321392 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/paamayim-nekudotayim.xml
+++ b/language/oop5/paamayim-nekudotayim.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: bc318ee83f58def8a7254db161cafb399352ff1d Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: 871545d23e0d983dc3c2a0dcd08ffa6ca03f238c Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
 
  <sect1 xml:id="language.oop5.paamayim-nekudotayim" xmlns="http://docbook.org/ns/docbook">
   <title>Operador de Resolución de Ámbito (::)</title>
@@ -118,6 +118,10 @@ $class->myFunc();
 ]]>
    </programlisting>
   </example>
+   <para>
+    Véase también <link linkend="language.oop5.basic.class.this">algunos ejemplos de 
+    trucos de llamadas estáticas </link>.
+ </para>
 
  </sect1>
  
