English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@321448 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/basic.xml
+++ b/language/oop5/basic.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 79ba70edc6e100b739ab272ffedacdc324fb9b79 Maintainer: jpberdejo Status: ready -->
-<!-- Reviewed: no --> 
+<!-- EN-Revision: 5340b7c60178936c53c78e1c6b0639fb873a7dca Maintainer: jpberdejo Status: ready -->
+<!-- Reviewed: yes --> 
 
  <sect1 xml:id="language.oop5.basic" xmlns="http://docbook.org/ns/docbook">
   <title>Lo básico</title>
@@ -55,7 +55,7 @@ class SimpleClass
     de un objeto secundario).
    </para>
    <para>
-    <example>
+    <example xml:id="language.oop5.basic.class.this">
      <title>Algunos ejemplo de la pseudo-variable <varname>$this</varname></title>
      <programlisting role="php">
 <![CDATA[
