File reviewed by: Jose Luis Garcia Hernandez
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@321687 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/basic-syntax.xml
+++ b/language/basic-syntax.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 62d27014053411b67ff2c87de7e12d6a40c99dad Maintainer: yago Status: ready -->
-<!-- Reviewed: no -->
+<!-- Reviewed: yes Maintainer: yago -->
 <chapter xml:id="language.basic-syntax" xmlns="http://docbook.org/ns/docbook">
  <title>Sintaxis básica</title>
  <sect1 xml:id="language.basic-syntax.phpmode">
