Files reviewed by: Jose Luis Garcia Hernandez
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@321688 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/foreach.xml
+++ b/language/control-structures/foreach.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 64d777f39e3dcefcc3a65032221cf4863f9db663 Maintainer: seros Status: ready -->
-<!-- Reviewed: no -->
+<!-- Reviewed: yes -->
 
 <sect1 xml:id="control-structures.foreach" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>foreach</literal></title>
@@ -27,7 +27,7 @@ foreach (expresión_array as $clave => $valor)
   La primera forma recorre el array dado por
   <literal>expresión_array</literal>. En cada iteración, el valor
   del elemento actual se asigna a <literal>$valor</literal> y
-  el puntero interno del array avanza una posición (así en la próximo
+  el puntero interno del array avanza una posición (así en la próxima
   iteración se estará observando el siguiente elemento).
  </simpara>
  <simpara>
