--- a/language/control-structures/return.xml
+++ b/language/control-structures/return.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
-<!-- Reviewed: no -->
+<!-- Reviewed: yes -->
 
 <sect1 xml:id="function.return" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>return</title>
@@ -9,7 +9,7 @@
  <simpara>
   Si se llama desde una función, la sentencia
   <function>return</function> inmediatamente termina la ejecución de la función actual, y
-  retorna su argumento como el valor de la llamada a la
+  devuelve su argumento como el valor de la llamada a la
   función. <function>return</function> también pondrá fin a la ejecución de
   una sentencia <function>eval</function> o a un archivo de script.
  </simpara>
@@ -37,7 +37,7 @@
    <simpara>
     Cabe señalar que dado que <function>return</function> es un constructor
     del lenguaje y no una función, los paréntesis que rodean su
-    argumentos no son necesarios. Es común que dejarlos fuera, y
+    argumentos no son necesarios. Es común no utilizarlos, y
     en realidad se debería hacer así a fin de que PHP tenga menos trabajo que hacer en este caso.
    </simpara>
   </note>
