--- a/language/oop5/changelog.xml
+++ b/language/oop5/changelog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: f0550025342228d4a7e6caa0edd2ec9d6ff63a00 Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: no -->
+<!-- Reviewed: yes -->
 
 <sect1 xml:id="language.oop5.changelog" xmlns="http://docbook.org/ns/docbook">
  <title>Registro de cambios de POO</title>
@@ -24,7 +24,7 @@
       <entry>5.4.0</entry>
       <entry>
        Cambiado: Si una clase <link linkend="language.oop5.abstract">abstract</link> 
-       define una signatura para el constructor ahora se hará cumplir.
+       define una firma para el constructor ahora se hará cumplir.
       </entry>
      </row>
      <row>
