--- a/language/control-structures/require.xml
+++ b/language/control-structures/require.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
-<!-- Reviewed: no -->
+<!-- Reviewed: yes -->
 
 <sect1 xml:id="function.require" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><function>require</function></title>
@@ -10,7 +10,7 @@
  <para>
   <function>require</function> es idéntico a <function>include</function>
   excepto que en caso de fallo producirá un error fatal de nivel <constant>E_COMPILE_ERROR</constant>. 
-  En otras palabras, este detiene el script mientras que
+  En otras palabras, éste detiene el script mientras que
   <function>include</function> sólo emitirá una advertencia
   (<constant>E_WARNING</constant>) lo cual permite continuar el script.
  </para>
