--- a/language/oop5/interfaces.xml
+++ b/language/oop5/interfaces.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: d08c651831f0675c3f936203916db8742e60fcae Maintainer: x1v4nx Status: ready -->
-<!-- Reviewed: no -->
+<!-- Reviewed: yes -->
 
  <sect1 xml:id="language.oop5.interfaces" xmlns="http://docbook.org/ns/docbook">
   <title>Interfaces de objetos</title>
@@ -24,7 +24,7 @@
    <para>
     Para implementar una interfaz, se utiliza el operador <literal>implements</literal>.
     Todos los métodos en una interfaz deben ser implementados dentro de la clase; el no
-    cumplir con esta regla resultara en un error fatal. Las clases pueden implementar
+    cumplir con esta regla resultará en un error fatal. Las clases pueden implementar
     más de una interfaz si se deseara, separándolas cada una por una coma.
    </para>
    <note>
@@ -52,7 +52,7 @@
    <para>
     Es posible tener constantes dentro de las interfaces. Las constantes de interfaces
     funcionan como las <link linkend="language.oop5.constants">constantes de clases</link>
-    excepto que no pueden ser sobrescritas por una clase/interfaz que las herede.
+    excepto porque no pueden ser sobreescritas por una clase/interfaz que las herede.
    </para>
   </sect2>
   <sect2 xml:id="language.oop5.interfaces.examples">
