updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@321969 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/functions.xml
+++ b/language/functions.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: a7d6b39bfb7a0e85270adb5ea863a76cf4350458 Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: yes -->
+<!-- EN-Revision: 1f067345c828ae456b72385969fdd85e54383d3d Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: yes Maintainer: andresdzphp -->
 
 <chapter xml:id="language.functions" xmlns="http://docbook.org/ns/docbook">
  <title>Funciones</title>
@@ -363,7 +363,7 @@ Hacer un tazón de yogur acidófilo de frambuensa.
    <title>Listas de argumentos de longitud variable</title>
    
    <simpara>
-    PHP 4 y superior tiene soporte para listas de argumentos de longitud variable en
+    PHP tiene soporte para listas de argumentos de longitud variable en
     funciones definidas por el usuario. Esto realmente es bastante fácil si se usan las funciones
     <function>func_num_args</function>,
     <function>func_get_arg</function>, y
