--- a/language/types/string.xml
+++ b/language/types/string.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 0fa36ed5cc43f9e4a46cdfef83710b4f1ac4c970 Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: 1f067345c828ae456b72385969fdd85e54383d3d Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
+
 <sect1 xml:id="language.types.string">
  <title>Cadenas</title>
  
@@ -383,12 +384,6 @@ FOOBAR;
     </programlisting>
    </example>
    
-   <note>
-    <para>
-     El soporte para Heredoc se añadió en PHP 4.
-    </para>
-   </note>
-   
   </sect3>
   
   <sect3 xml:id="language.types.string.syntax.nowdoc">
@@ -505,8 +500,8 @@ EOT;
    </simpara>
    
    <simpara>
-    La sintaxis compleja fue introducida en PHP 4, y puede ser reconocida por las
-    llaves que encierran la expresión.
+    La sintaxis compleja puede ser reconocida por las llaves 
+    que encierran la expresión.
    </simpara>
    
    <sect4 xml:id="language.types.string.parsing.simple">
