updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@322033 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/boolean.xml
+++ b/language/types/boolean.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 7743a1203a0f09317d1e1faade85dc144888c9eb Maintainer: lboshell Status: ready -->
+<!-- EN-Revision: b4dcc6c31d9862a05c25bb90a4c4a3e6354ae8ff Maintainer: lboshell Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
+
 <sect1 xml:id="language.types.boolean">
  <title>Booleanos</title>
 
@@ -8,12 +10,6 @@
   Este es el tipo más simple. Un <type>boolean</type> expresa un valor de
   verdad. Puede ser &true; or &false;.
  </simpara>
-
- <note>
-  <simpara>
-   El tipo <type>boolean</type> fue introducido en PHP 4.
-  </simpara>
- </note>
 
  <sect2 xml:id="language.types.boolean.syntax">
   <title>Sintaxis</title>
