--- a/language/types/float.xml
+++ b/language/types/float.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 3f82f09927c0584b3769ac2d9a9624512fafe793 Maintainer: jpberdejo Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: 2684871e4f3c75eadc3a39dc434161be83ae8b60 Maintainer: jpberdejo Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
+
 <sect1 xml:id="language.types.float">
  <title>Números de punto flotante</title>
  
