--- a/language/types/resource.xml
+++ b/language/types/resource.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: lboshell Status: ready -->
+<!-- EN-Revision: 1f067345c828ae456b72385969fdd85e54383d3d Maintainer: lboshell Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
+
 <sect1 xml:id="language.types.resource">
  <title>Recursos</title>
 
@@ -11,12 +13,6 @@
   un listado de todas estas funciones y los tipos <type>resource</type>
   correspondientes.
  </para>
-
- <note>
-  <simpara>
-   El tipo <type>resource</type> fue introducido en PHP 4
-  </simpara>
- </note>
 
  <para>
   Vea también la función <function>get_resource_type</function>.
