--- a/language/wrappers/http.xml
+++ b/language/wrappers/http.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 8b6d169424ff189bb563ef4c3f35f8adff3f42c5 Maintainer: yago Status: ready -->
+<!-- EN-Revision: 1f067345c828ae456b72385969fdd85e54383d3d Maintainer: yago Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
 
 <refentry xml:id="wrappers.http" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -156,13 +157,13 @@ $url = 'http://www.example.com/redirecting_page.php';
 $fp = fopen($url, 'r');
 
 $meta_data = stream_get_meta_data($fp);
-foreach($meta_data['wrapper_data'] as $response) {
+foreach ($meta_data['wrapper_data'] as $response) {
 
-    /* ¿Dónde se ha redirigido? */
-    if (substr(strtolower($response), 0, 10) == 'location: ') {
+    /* Were we redirected? */
+    if (strtolower(substr($response, 0, 10)) == 'location: ') {
 
-        /* actualizar la $url a la que nos han redirigido */
-        $url = substr($response, 18);
+        /* update $url with where we were redirected to */
+        $url = substr($response, 10);
     }
 
 }
@@ -175,13 +176,14 @@ foreach($meta_data['wrapper_data'] as $response) {
   <example xml:id="wrappers.http.example.custom.headers"> <!-- {{{ -->
    <title>Enviando cabeceras personalizadas en una petición HTTP</title>
    <para>
+   Pueden enviarse cabeceras personalizadas usando <link linkend="context.http">opciones 
+    de contexto</link>. También es posible usar este hack: 
    Pueden enviarse cabeceras personalizadas en una petición HTTP
    aprovechando un efecto colateral de la
    directiva INI <literal>user_agent</literal>. Establezca un string
    válido en <literal>user_agent</literal> (como el valor por omisión de
    <literal>PHP/versión</literal>) seguido de un par
    retorno de carro/salto de línea y cualquier otra cabecera adicional.
-   Este método funciona en PHP 4 o superior.
    </para>
    <programlisting role="php">
 <![CDATA[
