--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 3a6bfb99cee996cf7d104e989181c9157aed9781 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 1f067345c828ae456b72385969fdd85e54383d3d Maintainer: jpberdejo Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
+
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
@@ -1142,7 +1144,7 @@ Expression: 0 = -4 << 62
        <entry>Idéntico</entry>
        <entry>
         &true; si <varname>$a</varname> es igual a <varname>$b</varname>, y son del mismo
-        tipo. (a partir de PHP 4)
+        tipo.
        </entry>
       </row>
       <row>
@@ -1160,7 +1162,7 @@ Expression: 0 = -4 << 62
        <entry>No idéntico</entry>
        <entry>
         &true; si <varname>$a</varname> no es igual a <varname>$b</varname>, o si no son del mismo
-        tipo. (a partir de PHP 4)
+        tipo.
        </entry>
       </row>
       <row>
