updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@322049 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/return.xml
+++ b/language/control-structures/return.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
-<!-- Reviewed: yes -->
+<!-- EN-Revision: 1f426b8ca3bc4323173cb74c4f3c02a01963be9a Maintainer: jpberdejo Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
 
 <sect1 xml:id="function.return" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>return</title>
@@ -44,7 +44,7 @@
   <note>
    <simpara>
     Si no se suministra un parámetro, entonces el paréntesis debe omitirse
-    y <literal>NULL</literal> será
+    y &null; será
     retornado. Llamadas a <function>return</function> con paréntesis pero
     sin argumentos resultarán en un error del intérprete.
    </simpara>
