--- a/language/functions.xml
+++ b/language/functions.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 1f067345c828ae456b72385969fdd85e54383d3d Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: 85c790a244dbf8b711aa381db1025dd2fab4db94 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: yes Maintainer: andresdzphp -->
-
+ 
 <chapter xml:id="language.functions" xmlns="http://docbook.org/ns/docbook">
  <title>Funciones</title>
  
@@ -754,24 +754,46 @@ print $mi_carro->obtenerTotal(0.05) . "\n";
    <classname>Closure</classname></link>.
   </simpara>
   
-  <note>
-   <simpara>
-    Las funciones anónimas están disponibles desde PHP 5.3.0.
-   </simpara>
-  </note>
-  <note>
-   <simpara>
-    No era posible utilizar <varname>$this</varname> desde una función
-    anónima antes de la versión 5.4.0 de PHP.
-   </simpara>
-  </note>
-  <note>
-   <simpara>
-    Es posible usar <function>func_num_args</function>,
-    <function>func_get_arg</function>, y <function>func_get_args</function>
-    desde dentro de un cierre. 
-   </simpara>
-  </note>
+     <sect2 role="changelog">
+    &reftitle.changelog;
+    <para>
+     <informaltable>
+      <tgroup cols="2">
+       <thead>
+        <row>
+         <entry>&Version;</entry>
+         <entry>&Description;</entry>
+        </row>
+       </thead>
+       <tbody>
+        <row>
+         <entry>5.4.0</entry>
+         <entry>
+          <varname>$this</varname> puede ser usado en funciones anónimas.
+         </entry>
+        </row>
+        <row>
+         <entry>5.3.0</entry>
+         <entry>
+          Las funciones anónimas se encuentran disponibles.
+         </entry>
+        </row>
+       </tbody>
+      </tgroup>
+     </informaltable>
+    </para>
+   </sect2>
+
+   <sect2 role="notes">
+    &reftitle.notes;
+    <note>
+     <simpara>
+      Es posible usar <function>func_num_args</function>, 
+      <function>func_get_arg</function>, y <function>func_get_args</function> 
+      desde dentro de un cierre. 
+     </simpara>
+    </note>
+   </sect2>
   
  </sect1>
  
