--- a/reference/intl/locale/get-display-script.xml
+++ b/reference/intl/locale/get-display-script.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: seros Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: 6a6061bbd4b1c78af2b50aba8ddd8fd5e4590b05 Maintainer: seros Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
+
 <refentry xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" xml:id="locale.getdisplayscript">
  <refnamediv>
   <refname>Locale::getDisplayScript</refname>
@@ -12,7 +13,7 @@
  <refsect1 role="description">
   &reftitle.description;
   <para>
-   Estilo orientado a objetos
+   &style.oop;
   </para>
   <methodsynopsis>
    <modifier>static</modifier>
@@ -22,7 +23,7 @@
    <methodparam choice="opt"><type>string</type><parameter>in_locale</parameter></methodparam>
   </methodsynopsis>
   <para>
-   Estilo por procedimientos
+   &style.procedural;
   </para>
   <methodsynopsis>
    <type>string</type>
