updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@322164 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/autoload.xml
+++ b/language/oop5/autoload.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 7137ccc0fdbf158b97872772dd6a989f32f50365 Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: d6105d5f559885cd3ecc6d03586bc90151d29ab6 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
 
  <sect1 xml:id="language.oop5.autoload" xmlns="http://docbook.org/ns/docbook">
   <title>Auto-carga de Clases</title>
@@ -13,7 +13,7 @@
   </para>
   <para>
    En PHP 5, esto ya no es más necesario. Se puede definir una función
-   __autoload la cual es automáticamente invocada en caso de que esté
+   <function>__autoload</function> la cual es automáticamente invocada en caso de que esté
    intentando utilizar una clase/interfaz que todavía no haya sido definida.
    Al invocar a esta función el motor de scripting está dando una última
    oportunidad de cargar la clase antes que PHP falle con un error.
