--- a/language/oop5/changelog.xml
+++ b/language/oop5/changelog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: f0550025342228d4a7e6caa0edd2ec9d6ff63a00 Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: fcddfb2551140fba9a14a4c44dc9fa60004440c8 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: yes Maintainer: andresdzphp -->
 <!-- Reviewed: yes -->
 
 <sect1 xml:id="language.oop5.changelog" xmlns="http://docbook.org/ns/docbook">
@@ -66,8 +67,8 @@
      <row>
       <entry>5.3.0</entry>
       <entry>
-       Cambiado: Antes de 5.3.0, las excepciones lanzadas en la función
-       <link linkend="language.oop5.autoload">__autoload</link> no podían capturarse
+       Cambiado: Antes de 5.3.0, las excepciones lanzadas en la función 
+       <function>__autoload</function> no podían capturarse
        en el bloque <link linkend="language.exceptions">catch</link>, y provocaban
        un error fatal. Ahora, las excepciones lanzadas dentro de la función __autoload
        pueden capturarse en el bloque <link linkend="language.exceptions">catch</link>, con
@@ -102,13 +103,13 @@
      <row>
       <entry>5.3.0</entry>
       <entry>
-       Añadido: El método <link linkend="language.oop5.magic.invoke">__invoke</link>.
+       Añadido: El método <link linkend="object.invoke">__invoke()</link>.
       </entry>
      </row>
      <row>
       <entry>5.2.0</entry>
       <entry>
-       Cambiado: Al método <link linkend="language.oop5.magic.tostring">__toString</link>
+       Cambiado: Al método <link linkend="object.tostring">__toString()</link>
        sólo se le invocaba cuando se le combinaba con <function>echo</function> o con
        <function>print</function>. Pero ahora, se le invoca en cualquier contexto de strings
        (p.ej, en <function>printf</function> con el modificador <literal>%s</literal>) pero no
@@ -129,15 +130,15 @@
       <entry>5.1.0</entry>
       <entry>
        Cambiados: Ahora se invoca al método estático
-       <link linkend="language.oop5.magic.set-state">__set_state</link> en las clases
+       <link linkend="object.set-state">__set_state()</link> en las clases
        exportadas por <function>var_export</function>.
       </entry>
      </row>
      <row>
       <entry>5.1.0</entry>
       <entry>
-       Añadidos: Los métodos <link linkend="language.oop5.overloading.members">__isset</link>
-       y <link linkend="language.oop5.overloading.members">__unset</link>.
+       Añadidos: Los métodos <link linkend="object.isset">__isset()</link> 
+       y <link linkend="object.unset">__unset()</link>.
       </entry>
      </row>
     </tbody>
