--- a/language/oop5/magic.xml
+++ b/language/oop5/magic.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 4f3e16d7854ee82114b8d849731fbd7de57cc627 Maintainer: andresdzphp Status: ready -->
-
+<!-- EN-Revision: fcddfb2551140fba9a14a4c44dc9fa60004440c8 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
+ 
  <sect1 xml:id="language.oop5.magic" xmlns="http://docbook.org/ns/docbook">
   <title>Métodos mágicos</title> 
   <para>
    Los nombres de método 
-   <link linkend="language.oop5.decon.constructor">__construct()</link>,
-   <link linkend="language.oop5.decon.destructor">__destruct()</link>,
-   <link linkend="language.oop5.overloading.methods">__call()</link>,
-   <link linkend="language.oop5.overloading.methods">__callStatic()</link>,
-   <link linkend="language.oop5.overloading.members">__get()</link>,
-   <link linkend="language.oop5.overloading.members">__set()</link>,
-   <link linkend="language.oop5.overloading.members">__isset()</link>,
-   <link linkend="language.oop5.overloading.members">__unset()</link>,
-   <link linkend="language.oop5.magic.sleep">__sleep()</link>,
-   <link linkend="language.oop5.magic.sleep">__wakeup()</link>,
-   <link linkend="language.oop5.magic.tostring">__toString()</link>,
-   <link linkend="language.oop5.magic.invoke">__invoke()</link>,
-   <link linkend="language.oop5.magic.set-state">__set_state()</link> y 
-   <link linkend="language.oop5.cloning">__clone()</link> 
+   <link linkend="object.construct">__construct()</link>,
+   <link linkend="object.destruct">__destruct()</link>,
+   <link linkend="object.call">__call()</link>,
+   <link linkend="object.callstatic">__callStatic()</link>,
+   <link linkend="object.get">__get()</link>,
+   <link linkend="object.set">__set()</link>,
+   <link linkend="object.isset">__isset()</link>,
+   <link linkend="object.unset">__unset()</link>,
+   <link linkend="object.sleep">__sleep()</link>,
+   <link linkend="object.wakeup">__wakeup()</link>,
+   <link linkend="object.tostring">__toString()</link>,
+   <link linkend="object.invoke">__invoke()</link>,
+   <link linkend="object.set-state">__set_state()</link> y
+   <link linkend="object.clone">__clone()</link>
    son mágicos en las clases PHP. No se puede tener métodos con estos 
    nombres en cualquiera de las clases a menos que desee la funcionalidad 
    mágica asociada a estos.
@@ -35,35 +36,45 @@
  
   <sect2 xml:id="language.oop5.magic.sleep">
    <title>
-    <link linkend="language.oop5.magic.sleep">__sleep()</link> y
-    <link linkend="language.oop5.magic.sleep">__wakeup()</link>
+    <link linkend="object.sleep">__sleep()</link> y
+    <link linkend="object.wakeup">__wakeup()</link>
    </title>
+   
+    <methodsynopsis xml:id="object.sleep">
+    <modifier>public</modifier> <type>array</type><methodname>__sleep</methodname>
+    <void/>
+   </methodsynopsis>
+   <methodsynopsis xml:id="object.wakeup">
+    <type>void</type><methodname>__wakeup</methodname>
+    <void/>
+   </methodsynopsis>
+   
    <para>
     <function>serialize</function> comprueba si la clase tiene un método con 
-    el nombre mágico <link linkend="language.oop5.magic.sleep">__sleep()</link>. Si es así, 
+    el nombre mágico <link linkend="object.sleep">__sleep()</link>. Si es así, 
     el método se ejecuta antes de cualquier serialización. Se puede limpiar el objeto y se supone 
     que devuelve un array con los nombres de todas las variables de el objeto que se va a serializar.
     Si el método no devuelve nada, entonces &null; es serializado y un error <constant>E_NOTICE</constant> es emitido.
    </para>
    <note>
     <para>
-     No es posible para <link linkend="language.oop5.magic.sleep">__sleep()</link> devolver 
+     No es posible para <link linkend="object.sleep">__sleep()</link> devolver 
      nombres de propiedades privadas en las clases padres. Hacer esto resultaría un nivel de error
      <constant>E_NOTICE</constant>. En su lugar, puede utilizar la interfaz <classname>Serializable</classname>.
     </para>
    </note>
    <para>
-    El uso para el que está destinado <link linkend="language.oop5.magic.sleep">__sleep</link> consiste 
+    El uso para el que está destinado <link linkend="object.sleep">__sleep()</link> consiste 
     en confirmar datos pendientes o realizar tareas similares de limpieza. Además, el método es útil si 
     tiene objetos muy grandes que no necesitan guardarse por completo.
    </para>
    <para>
     Por el contrario, <function>unserialize</function> comprueba la presencia de un método con el nombre mágico  
-    <link linkend="language.oop5.magic.sleep">__wakeup()</link>. Si está presente, este método puede reconstruir 
+    <link linkend="object.wakeup">__wakeup()</link>. Si está presente, este método puede reconstruir 
     cualquier recurso que el objeto pueda tener.
    </para>
    <para>
-    El uso para el que está destinado <link linkend="language.oop5.magic.sleep">__wakeup()</link> es restablecer 
+    El uso para el que está destinado <link linkend="object.wakeup">__wakeup()</link> es restablecer 
     las conexiones de base de datos que se puedan haber perdido durante la serialización y realizar otras tareas 
     de reinicialización.
    </para>
@@ -109,9 +120,13 @@ class Connection
   </sect2>
 
   <sect2 xml:id="language.oop5.magic.tostring">
-   <title><link linkend="language.oop5.magic.tostring">__toString()</link></title>
+   <title><link linkend="object.tostring">__toString()</link></title>
+   <methodsynopsis xml:id="object.tostring">
+    <modifier>public</modifier> <type>string</type><methodname>__toString</methodname>
+    <void/>
+   </methodsynopsis>
    <para>
-    El método <link linkend="language.oop5.magic.tostring">__toString()</link> permite a una clase 
+    El método <link linkend="object.tostring">__toString()</link> permite a una clase 
     decidir cómo comportarse cuando se le trata como una string. Por ejemplo,
     lo que <literal>echo $obj;</literal> mostraría. Este método debe 
     devolver un string, si no se emitirá un nivel de error fatal <constant>E_RECOVERABLE_ERROR</constant>.
@@ -151,21 +166,25 @@ Hola Mundo
    </example>
    <para>
     Antes de PHP 5.2.0 el método 
-    <link linkend="language.oop5.magic.tostring">__toString()</link> 
+    <link linkend="object.tostring">__toString()</link> 
     se llama sólo cuando se combina directamente con
     <function>echo</function> o <function>print</function>.
     Desde PHP 5.2.0, se le llama en cualquier contexto de string (e.j. en
     <function>printf</function> con  el modificador <literal>%s</literal>) pero no 
     en el contexto de otros tipos (e.j. con el modificador <literal>%d</literal>).
-    Desde PHP 5.2.0, la conversión de los objetos sin el método <link linkend="language.oop5.magic.tostring">__toString()</link> 
+    Desde PHP 5.2.0, la conversión de los objetos sin el método <link linkend="object.tostring">__toString()</link> 
     a string podría causar <constant>E_RECOVERABLE_ERROR</constant>.
    </para>
   </sect2>
 
   <sect2 xml:id="language.oop5.magic.invoke">
-   <title><link linkend="language.oop5.magic.invoke">__invoke()</link></title>
+   <title><link linkend="object.invoke">__invoke()</link></title>
+   <methodsynopsis xml:id="object.invoke">
+    <type>mixed</type><methodname>__invoke</methodname>
+    <methodparam choice="opt"><parameter>...</parameter></methodparam>
+   </methodsynopsis>
    <para>
-    El método <link linkend="language.oop5.magic.invoke">__invoke()</link> es llamado cuando 
+    El método <link linkend="object.invoke">__invoke()</link> es llamado cuando 
     un script intenta llamar a un objeto como si fuera una función.
    </para>
    <note>
@@ -174,7 +193,7 @@ Hola Mundo
     </para>
    </note>
    <example>
-    <title>Uso de <link linkend="language.oop5.magic.invoke">__invoke()</link></title>
+    <title>Uso de <link linkend="object.invoke">__invoke()</link></title>
     <programlisting role="php">
 <![CDATA[
 <?php
@@ -202,7 +221,11 @@ bool(true)
   </sect2>
 
   <sect2 xml:id="language.oop5.magic.set-state">
-   <title><link linkend="language.oop5.magic.set-state">__set_state()</link></title>
+   <title><link linkend="object.set-state">__set_state()</link></title>
+   <methodsynopsis xml:id="object.set-state">
+    <modifier>static</modifier> <type>object</type><methodname>__set_state</methodname>
+    <methodparam><type>array</type><parameter>properties</parameter></methodparam>
+   </methodsynopsis>
    <para>
     Este método <link linkend="language.oop5.static">static</link> es llamado para 
     las clases exportadas por <function>var_export</function>, desde PHP 5.1.0.
@@ -212,7 +235,7 @@ bool(true)
     en la forma <literal>array('property' => value, ...)</literal>.
    </para>
    <example>
-    <title>Uso de <link linkend="language.oop5.magic.set-state">__set_state()</link> (desde PHP 5.1.0)</title>
+    <title>Uso de <link linkend="object.set-state">__set_state()</link> (desde PHP 5.1.0)</title>
     <programlisting role="php">
 <![CDATA[
 <?php
