English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@322209 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 1f067345c828ae456b72385969fdd85e54383d3d Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 28d123ef985df5a7b86f3601e035968ee1b3b142 Maintainer: jpberdejo Status: ready -->
 <!-- Reviewed: no Maintainer: andresdzphp -->
 
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
@@ -2053,7 +2053,7 @@ bool(false)
    </para>
    <para>
     Hay algunas trampas para tener en cuenta. Antes de versión de PHP 5.1.0,
-    <literal>instanceof</literal> llamaría a <link linkend="language.oop5.autoload">__autoload()</link>
+    <literal>instanceof</literal> llamaría a <function>__autoload</function>
     si el nombre de clase no existía. Además, si la clase no estaba cargada,
     un error fatal ocurriría. Esto se puede solucionar mediante una referencia
     de clase dinámica o una variable string que contenga el nombre de la clase:
